--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -556,11 +556,45 @@
                         <outlet property="passwordField" destination="jTy-sy-Gvk" id="r4f-f4-SKs"/>
                         <outlet property="registrationView" destination="McY-mg-Gcn" id="RQD-oT-okA"/>
                         <outlet property="sidebarButton" destination="Ecd-Ll-nUl" id="OIt-UN-o94"/>
+                        <segue destination="Xe2-Wi-8QZ" kind="show" identifier="profile_view" id="j2K-an-z6G"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hPY-0T-DcY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="970" y="-1075"/>
+            <point key="canvasLocation" x="951" y="-1194"/>
+        </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="jh1-Qg-Efd">
+            <objects>
+                <viewController id="Xe2-Wi-8QZ" customClass="ProfileViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="o2S-SC-OAf"/>
+                        <viewControllerLayoutGuide type="bottom" id="hse-fw-X29"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MSf-7H-ps0">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="51c-2G-4L8">
+                                <rect key="frame" x="16" y="72" width="190" height="44"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="51c-2G-4L8" firstAttribute="top" secondItem="o2S-SC-OAf" secondAttribute="bottom" constant="8" id="9Tw-BT-INZ"/>
+                            <constraint firstItem="51c-2G-4L8" firstAttribute="leading" secondItem="MSf-7H-ps0" secondAttribute="leadingMargin" id="UaB-Hw-bho"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="userEmail" destination="51c-2G-4L8" id="caj-2f-VDc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Eh-TM-mUL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1656" y="-1187"/>
         </scene>
         <!--Reveal View Controller-->
         <scene sceneID="F2t-O3-bA9">
